// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1 1`] = `
<div
  data-testid="rating-tag"
>
  <p
    style={
      Object {
        "color": "grey",
      }
    }
  >
    still not rated
  </p>
</div>
`;

exports[`matches snapshot 2 1`] = `
<div
  data-testid="rating-tag"
/>
`;

exports[`matches snapshot 3 1`] = `
<div
  data-testid="rating-tag"
>
  <div
    className="ui disabled rating"
    onMouseLeave={[Function]}
    role="radiogroup"
  >
    <i
      aria-checked={false}
      aria-posinset={1}
      aria-setsize={5}
      className="active icon"
      onClick={[Function]}
      onKeyUp={[Function]}
      onMouseEnter={[Function]}
      role="radio"
      tabIndex={0}
    />
    <i
      aria-checked={false}
      aria-posinset={2}
      aria-setsize={5}
      className="active icon"
      onClick={[Function]}
      onKeyUp={[Function]}
      onMouseEnter={[Function]}
      role="radio"
      tabIndex={0}
    />
    <i
      aria-checked={false}
      aria-posinset={3}
      aria-setsize={5}
      className="active icon"
      onClick={[Function]}
      onKeyUp={[Function]}
      onMouseEnter={[Function]}
      role="radio"
      tabIndex={0}
    />
    <i
      aria-checked={false}
      aria-posinset={4}
      aria-setsize={5}
      className="active icon"
      onClick={[Function]}
      onKeyUp={[Function]}
      onMouseEnter={[Function]}
      role="radio"
      tabIndex={0}
    />
    <i
      aria-checked={true}
      aria-posinset={5}
      aria-setsize={5}
      className="active icon"
      onClick={[Function]}
      onKeyUp={[Function]}
      onMouseEnter={[Function]}
      role="radio"
      tabIndex={0}
    />
  </div>
</div>
`;

exports[`matches snapshot 4 1`] = `
<div
  data-testid="rating-tag"
/>
`;

exports[`matches snapshot 5 1`] = `
<div
  data-testid="rating-tag"
>
  <div
    className="ui disabled rating"
    onMouseLeave={[Function]}
    role="radiogroup"
  >
    <i
      aria-checked={false}
      aria-posinset={1}
      aria-setsize={5}
      className="active icon"
      onClick={[Function]}
      onKeyUp={[Function]}
      onMouseEnter={[Function]}
      role="radio"
      tabIndex={0}
    />
    <i
      aria-checked={false}
      aria-posinset={2}
      aria-setsize={5}
      className="active icon"
      onClick={[Function]}
      onKeyUp={[Function]}
      onMouseEnter={[Function]}
      role="radio"
      tabIndex={0}
    />
    <i
      aria-checked={true}
      aria-posinset={3}
      aria-setsize={5}
      className="active icon"
      onClick={[Function]}
      onKeyUp={[Function]}
      onMouseEnter={[Function]}
      role="radio"
      tabIndex={0}
    />
    <i
      aria-checked={false}
      aria-posinset={4}
      aria-setsize={5}
      className="icon"
      onClick={[Function]}
      onKeyUp={[Function]}
      onMouseEnter={[Function]}
      role="radio"
      tabIndex={0}
    />
    <i
      aria-checked={false}
      aria-posinset={5}
      aria-setsize={5}
      className="icon"
      onClick={[Function]}
      onKeyUp={[Function]}
      onMouseEnter={[Function]}
      role="radio"
      tabIndex={0}
    />
  </div>
</div>
`;

exports[`matches snapshot 6 1`] = `
<div
  data-testid="rating-tag"
/>
`;
